--- a/package.json
+++ b/package.json
@@ -10,9 +10,14 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.19.2",
+    "connect-ensure-login": "^0.1.1",
+    "dotenv": "^16.0.0",
     "ejs": "^3.1.6",
     "express": "^4.17.2",
+    "express-session": "^1.17.2",
     "mongoose": "^6.2.1",
+    "passport": "^0.5.2",
+    "passport-local-mongoose": "^7.0.0",
     "path": "^0.12.7"
   }
 }
