--- a/package.json
+++ b/package.json
@@ -10,12 +10,15 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.19.2",
+    "bs-custom-file-input": "^1.3.4",
     "connect-ensure-login": "^0.1.1",
+    "csvtojson": "^2.0.10",
     "dotenv": "^16.0.0",
     "ejs": "^3.1.6",
     "express": "^4.17.2",
     "express-session": "^1.17.2",
     "mongoose": "^6.2.1",
+    "multer": "^1.4.4",
     "nodemon": "^2.0.15",
     "passport": "^0.5.2",
     "passport-local-mongoose": "^7.0.0",
